--- a/src/pages/chatArea/index.less
+++ b/src/pages/chatArea/index.less
@@ -1,20 +1,43 @@
-.chat-content {
+.chat-container {
   position: relative;
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
+
   .output-area {
     width: 100%;
     height: 100%;
     overflow: auto;
+    display: flex;
+    justify-content: center;
+    .answer-container {
+      width: 90%;
+      word-break: break-all;
+      text-overflow: ellipsis;
+    }
   }
   .input-area {
     position: absolute;
     min-height: 80px;
     width: 500px;
-    background-color: rgb(54, 52, 51);
+    background-color: var(--color-bg-1);
     bottom: 40px;
     border-radius: 16px;
+    padding: 10px 0;
+    color: var(--color-text);
+
+    .self-textarea {
+      background-color: var(--color-bg-1);
+      border: none;
+    }
+    .self-textarea:focus-within {
+      border: none;
+      box-shadow: none;
+    }
+    .self-button {
+      margin-right: 20px;
+      text-align: right;
+    }
   }
 }
