--- a/src/App.less
+++ b/src/App.less
@@ -1,29 +1,31 @@
 .app-container {
   position: relative;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 70px);
   width: 100%;
 
-  .header {
+  .app-header {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 100;
   }
 
   .section {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: calc(100vh - 120px);
+    height: calc(100vh - 90px);
     margin-top: 70px;
     .side-container {
-      flex: 1;
-      margin: 5px 10px 10px 0;
-      overflow: auto;
-      background-color: var(--color-bg-1);
+      width: auto;
+      overflow-y: auto;
+      overflow-x:hidden;
+      background-color: var(--color-bg);
     }
     .char-container {
       flex: 3;
-      margin: 16px 0px;
+      padding: 10px 0px;
+      background-color: var(--color-footer);
     }
   }
   .footer {
@@ -31,7 +33,11 @@
     bottom: 0px;
     text-align: center;
     width: 100%;
-    background-color: rgb(145, 158, 170);
-    color: white;
+    background-color: var(--color-footer);
+    color: var(--color-text-1);
+    height: 30px;
+    font-size: 12px;
+    line-height: 30px;
+    box-shadow: 12px 13px 20px 0px black;
   }
 }
