--- a/src/pages/chatArea/index.less
+++ b/src/pages/chatArea/index.less
@@ -7,27 +7,29 @@
 
   .output-area {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 120px);
     overflow: auto;
+    scroll-behavior: smooth;
     display: flex;
     justify-content: center;
     .answer-container {
-      width: 90%;
-      word-break: break-all;
+      min-width: 420px;
+      max-width: 960px;
+      word-break:keep-all;
       text-overflow: ellipsis;
     }
   }
   .input-area {
     position: absolute;
-    min-height: 80px;
-    width: 500px;
-    background-color: var(--color-bg-1);
-    bottom: 40px;
-    border-radius: 16px;
-    padding: 10px 0;
-    color: var(--color-text);
+    bottom: 4px;
 
     .self-textarea {
+      min-height: 80px;
+      width: 500px;
+      background-color: var(--color-bg-1);
+      border-radius: 16px;
+      padding: 0 0 40px 0;
+      color: var(--color-text);
       background-color: var(--color-bg-1);
       border: none;
     }
@@ -38,6 +40,11 @@
     .self-button {
       margin-right: 20px;
       text-align: right;
+      width: auto;
+      position: absolute;
+      bottom: 8px;
+      right: 10px;
+      z-index: 10;
     }
   }
 }
