--- a/src/theme/light.css
+++ b/src/theme/light.css
@@ -1,10 +1,27 @@
 :root {
     --color-bg: #ffffff;
-    --color-bg-1: #f0e9e9;
+    --color-bg-1: #ffffff;
     --color-text: #000000;
+    --color-text-1: #cac7c7;
     --color-primary: #007bff;
     --gradient-color-1: #9bb2c8;
     --gradient-color-2: #79addc;
     --gradient-color-3: #16a5e7;
     --gradient-color-4: #4571da;
+    --color-footer: #f5f5f8;
   }
+
+  /* 针对 Chrome / Safari / Edge (WebKit 内核) */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.4); /* 滚动块 */
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent; /* 滚动轨道 */
+}
