feat：新增对话markdown处理

--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,4 @@
-.app-container {
+.self-app-container {
   position: relative;
   height: calc(100vh - 70px);
   width: 100%;
@@ -36,7 +36,7 @@
     background-color: var(--color-footer);
     color: var(--color-text-1);
     height: 30px;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 30px;
     box-shadow: 12px 13px 20px 0px black;
   }
