--- a/src/theme/light.css
+++ b/src/theme/light.css
@@ -1,6 +1,6 @@
 :root {
     --color-bg: #ffffff;
-    --color-bg-1: #ffffff;
+    --color-bg-1: #e8e8e8;
     --color-text: #000000;
     --color-text-1: #cac7c7;
     --color-primary: #007bff;
