--- a/src/pages/chatArea/index.less
+++ b/src/pages/chatArea/index.less
@@ -7,21 +7,58 @@
 
   .output-area {
     width: 100%;
-    height: calc(100% - 120px);
+    height: calc(100vh - 240px);
     overflow: auto;
     scroll-behavior: smooth;
     display: flex;
     justify-content: center;
     .answer-container {
-      min-width: 420px;
+      min-width: 900px;
       max-width: 960px;
       word-break:keep-all;
       text-overflow: ellipsis;
+
+      .tempAnswerArea{
+        height: calc(100vh - 400px);
+        font-size: 20px;
+        font-weight: bold;
+        .dot {
+          color: var(--color-text);
+          animation-name: blink;
+          animation-duration: 1.5s;
+          animation-iteration-count: infinite;
+          animation-fill-mode: forwards;
+          animation-timing-function: ease-in-out;
+          margin-left: 2px;
+          opacity: 0.3;
+        }
+        
+        /* 三个点延迟错开 */
+        .dot:nth-child(2) {
+          animation-delay: 0s;
+        }
+        .dot:nth-child(3) {
+          animation-delay: 0.3s;
+        }
+        .dot:nth-child(4) {
+          animation-delay: 0.6s;
+        }
+        
+
+      }
     }
   }
   .input-area {
     position: absolute;
     bottom: 4px;
+
+    .scroll-button{
+      box-shadow:none;
+      position: absolute;
+      top: -50%;
+      left: 45%;
+      opacity: 0.9;
+    }
 
     .self-textarea {
       min-height: 80px;
@@ -45,6 +82,22 @@
       bottom: 8px;
       right: 10px;
       z-index: 10;
+
+      .button{
+        box-shadow:none
+      }
+    }
+  }
+
+  @keyframes blink {
+    0%, 80%, 100% {
+      opacity: 0.3;
+      color: gray;
+    }
+    40% {
+      opacity: 1;
+      color: var(--color-text);
     }
   }
 }
+
