--- a/src/pages/chatArea/index.less
+++ b/src/pages/chatArea/index.less
@@ -8,7 +8,8 @@
   .output-area {
     width: 100%;
     height: calc(100vh - 240px);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     scroll-behavior: smooth;
     display: flex;
     justify-content: center;
