--- a/src/pages/topBar/index.less
+++ b/src/pages/topBar/index.less
@@ -1,5 +1,10 @@
 .topbar {
   z-index: 100;
+  .title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
   .header {
     display: flex;
     align-items: center;
